--- a/.gitignore
+++ b/.gitignore
@@ -292,4 +292,4 @@ media
 # Local History for Visual Studio Code
 .history/
 
-# End of https://mrkandreev.name/snippets/gitignore-generator/#venv,Node,Python,Django,VisualStudioCodeg
+# End of https://mrkandreev.name/snippets/gitignore-generator/#venv,Node,Python,Django,VisualStudioCode
